--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,17 +1,21 @@
+*{
+  scrollbar-gutter: stable;
+}
 #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+
 }
 body{
-  min-height: 100%;
-  
+  min-height: 100vh;
+
 }
 html{
   display: flex;
   flex-direction: column  ;
-  
+
 }
 .logo {
   height: 6em;
