--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -111,3 +111,6 @@ html{
   box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
   /* box-shadow: 4px 4px 4px rgba(60, 60, 93, 0.33) */
 }
+img{
+  display: block;
+}
